# rwgfx

./: Cargo.toml  README.md
src/: animation.rs  application.rs  asset.rs  button.rs  camera.rs  color.rs  context.rs  drawable.rs  error.rs  lib.rs  mesh.rs  pipeline.rs  pipelines.rs  renderer.rs  shader.rs  sprite.rs  text.rs  texture.rs  vertex.rs
src/shader/: base.wgsl  base2.wgsl  general.rs  general.wgsl  mod.rs  text.wgsl  text_gen.wgsl
