[package]
name = "rwgfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
chrono = "0.4.31"
env_logger = "0.10.0"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.20"
rwlog = { path = "../rwlog", version = "0.1.0" }
wgpu = "0.17.0"
winit = "0.28.6"
