[package]
name = "rwgfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
cgmath = "0.18.0"
chrono = "0.4.31"
env_logger = "0.10.0"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.20"
pollster = "0.3.0"
raw-window-handle = "0.5.2"
rwcompute = { path = "../rwcompute", version = "0.1.0" }
rwlog = { path = "../rwlog", version = "0.1.0" }
rusttype = { version = "0.9.3", features = ["gpu_cache"] }
wgpu = "0.16.3"
