[package]
name = "rwgfx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
chrono = "0.4.31"
crossbeam = "0.8.2"
glium = "0.36.0"
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
rwlog = { path = "../rwlog", version = "0.1.0" }
